Fixed icons gap for songs page

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -235,7 +235,7 @@ button {
   color: rgba(255, 255, 255, 0.527);
   font-family: Gotham;
   font-size: 14px;
-  gap: 15%;
+  gap: 12%;
   margin-top: 32px;
 }
 
